# standup-agent

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
docs/: architecture.md  roadmap.md  system-design.md  vision.md
specs/001-github-pr-classifier/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-github-pr-classifier/checklists/: requirements.md
specs/001-github-pr-classifier/contracts/: cli-schema.md  library-api.md  output-schema.md
specs/002-github-activity-collector/: spec.md
src/pr_classifier/: __init__.py  _classifier.py  _exceptions.py  _fetcher.py  _models.py
src/pr_classifier.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pr_classifier/_cli/: main.py
tests/integration/: test_cli.py
tests/unit/: conftest.py  test_classifier.py  test_fetcher.py  test_models.py
